# Bullet-Hell-Jam-6-Game

./: .gitignore  Bullet Hell Jam 6 Project.sln  Bullet Hell Jam 6 Project.vcxproj  Bullet Hell Jam 6 Project.vcxproj.filters  Bullet Hell Jam 6 Windows Project.vcxproj  Bullet Hell Jam 6 Windows Project.vcxproj.filters  CMakeLists.txt  Findglfw3.cmake  SpriteRendererFS.glsl  clean.sh  common.cmake  desktop.cmake  launch.sh  linux_package.sh  rebuild.sh  shell.html  web.cmake  web_launch.sh  web_rebuild.sh  web_zip.sh
Bullet Hell Jam 6 Windows Project/: Bullet Hell Jam 6 Windows Project.vcxproj  Bullet Hell Jam 6 Windows Project.vcxproj.filters  Engine.cpp  Game.cpp  ResourceManager.h  Shader.cpp  SpriteRenderer.cpp  SpriteRenderer.h  Window.cpp  Window.h
Bullet Hell Jam 6 Windows Project/x64/Debug/: SpriteRendererFS.glsl
assets/Shaders23/: BackgroundShaderFS.glsl  SpriteRendererFS.glsl
assets/Shaders46/: BackgroundShaderFS.glsl  BackgroundShaderVS.glsl  SpriteRendererFS.glsl
builds/Windows 64 bit/Debug/: SpriteRendererFS.glsl
src/: Animation.cpp  Animation.h  Assets.cpp  Assets.h  Audio.cpp  Audio.h  BackgroundRenderer.cpp  BackgroundRenderer.h  Beholder.cpp  Beholder.h  BigBoy.cpp  BigBoy.h  Bomba.cpp  Bomba.h  Bullet.cpp  Bullet.h  Button.cpp  Button.h  Collisions.h  CreditsMenu.cpp  CreditsMenu.h  CultistBasic.cpp  CultistBasic.h  DebugDraw.cpp  DebugDraw.h  Effect.h  Enemy.cpp  Enemy.h  Engine.cpp  Engine.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameObjectPro.cpp  GameObjectPro.h  GameOverMenu.cpp  GameOverMenu.h  Input.cpp  Input.h  (+35 more)
(+5 files in other folders)
